# aisdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.sh
.github/workflows/: release.yml
examples/git-summary/: Cargo.toml
examples/git-summary/prompts/: system.md
examples/git-summary/src/: main.rs
examples/product-classifier/: Cargo.toml
examples/product-classifier/src/: api.rs  classifier.rs  main.rs
examples/product-classifier/src/prompts/: category.md
macros/: Cargo.toml  README.md
macros/src/: lib.rs
macros/tests/: test_tools.rs
scripts/: gen_capabilities.py  provider-codegen.py
src/: error.rs  lib.rs  prompt.rs
src/core/: capabilities.rs  client.rs  messages.rs  mod.rs  tools.rs  utils.rs
src/core/embedding_model/: mod.rs  request.rs
src/core/language_model/: generate_text.rs  mod.rs  request.rs  stream_text.rs
src/integrations/: dioxus.rs  mod.rs  vercel_aisdk_ui.rs
src/providers/: mod.rs
src/providers/amazon_bedrock/: mod.rs
src/providers/anthropic/: client.rs  conversions.rs  language_model.rs  mod.rs  settings.rs  utils.rs
src/providers/berget/: mod.rs
src/providers/deepseek/: mod.rs
src/providers/google/: conversions.rs  embedding_model.rs  language_model.rs  mod.rs  settings.rs
src/providers/groq/: mod.rs  settings.rs
src/providers/jiekou/: mod.rs
src/providers/openai/: mod.rs  (+4 more)
tests/: anthropic_provider_integration_tests.rs  dioxus_hook_tests.rs  openai_provider_integration_tests.rs
tests/provider/: anthropic_tests.rs  google_tests.rs  groq_tests.rs  macros.rs  openai_tests.rs  openrouter_tests.rs
(+25 files in other folders)
