[package]
name = "product-classifier"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
aisdk = { path = "../..", features = ["anthropic"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
urlencoding = "2.1"
